--- a/index.tex
+++ b/index.tex
@@ -71,7 +71,7 @@
     \printglossaries
     \addcontentsline{toc}{section}{Index}
     \cleardoublepage
-    % we need to define the plain style to be fancy to print the footers at the bottom of the index
+    % we need to redefine the plain style to be fancy to print the footers at the bottom of the index
     \pagestyle{fancy}
     \fancypagestyle{plain}
     \fancyhead{}
