--- a/use_cases.tex
+++ b/use_cases.tex
@@ -23,7 +23,7 @@ All of this data is in the public domain and freely available to anyone that has
 \begin{itemize}
     \item 1.5 TB of \gls{merra} three dimensional historical data \cite{mdisc}
 \end{itemize}
-Even with data volumes approaching several terabytes for the full effort, tornado prediction does not conform to the criteria for big data because it lacks all three attributes. The incoming data velocity can be based on several factors: how often is the input data available, how frequently is the output generated, and how long it takes to processes the incoming data. The tornado analytic is expected to be generated monthly which means input must be processed at least that often. The \gls{soi} and \gls{tvs} data sets are small enough to be considered noise with respect to the larger \gls{merra} data. Even at several terabytes, \gls{merra} can still fit on one or two hard drives, eliminating the need for more than one system to store all the data.  Although, four data sets will require four different parsers to process and ingest the data, the parsers are fairly straightforward since the data sets are structured with ample documentation. Preliminary tests have shown that processing a single day of \gls{merra} (300MB) and writing into an SQLite flat file takes approximately 20 seconds per variable a modern CPU \cite{keller1}. Taken together, the velocity, volume, and variety of data do not constitute a challenge in the development of the tornado predictive analytic.\\
+Even with data volumes approaching several terabytes for the full effort, tornado prediction does not conform to the criteria for big data\index{big data} because it lacks all three attributes. The incoming data velocity can be based on several factors: how often is the input data available, how frequently is the output generated, and how long it takes to processes the incoming data. The tornado analytic is expected to be generated monthly which means input must be processed at least that often. The \gls{soi} and \gls{tvs} data sets are small enough to be considered noise with respect to the larger \gls{merra} data. Even at several terabytes, \gls{merra} can still fit on one or two hard drives, eliminating the need for more than one system to store all the data.  Although, four data sets will require four different parsers to process and ingest the data, the parsers are fairly straightforward since the data sets are structured with ample documentation. Preliminary tests have shown that processing a single day of \gls{merra} (300MB) and writing into an SQLite flat file takes approximately 20 seconds per variable a modern CPU \cite{keller1}. Taken together, the velocity, volume, and variety of data do not constitute a challenge in the development of the tornado predictive analytic.\\
 
 The \gls{soi} data set is primarily used as an indicator of an El Niño or La Niña trend, which is useful in predictive climate analytics in general. This data set is updated monthly by the Australian Bureau of Meteorology, giving us a baseline for how frequently our ClimatEdge\texttrademark{}\index{ClimatEdge} offerings will be produced. While specific customers may or may not require monthly feeds, the methods will be in place to generate them at that frequency. Generating them more frequently than monthly will not produce substantially different results.\\
 
@@ -38,7 +38,7 @@ The flood analytics require the following initial public domain data sets \cite{
 \end{itemize}
 Recalling the attributes of big data\index{big data}: velocity, volume, and variety, it becomes clear that flood prediction falls into this category more so than tornado data. It is expected that ingesting relevant newspaper and social media data will add a daily component with reports of damage, especially during the various flood seasons. Even without taking into account the global nature of the offering for flood prediction, the satellite rainfall and \gls{merra} data sets will be larger than the corresponding sets in tornado (mainly due to more input variables). Without even addressing existing structures or the hydrologic response models, the entirety of the input data set is larger. Much of the data sets are computer published, leading to structured input, however the media component implies unstructured data. The flood data has greater volume, higher velocity, and wider variety than the tornado analytic and is more representative of a big data problem.\\
 
-As seen in table \ref{qualifiers},  the flood analytic ingests a larger and wider variety of data sets at a faster pace than the corresponding tornado analytic. Although the format and frequency of both analytic offerings are similar, the infrastructure needed to produce those offerings are quite different in scale.
+As seen in table \ref{qualifiers}, the flood analytic ingests a larger and wider variety of data sets at a faster pace than the corresponding tornado analytic. Although the format and frequency of both analytic offerings are similar, the infrastructure needed to produce those offerings are quite different in scale.
 \begin{table}[htbp]
     \centering
     \begin{tabular}{l l l}
@@ -60,4 +60,4 @@ It is possible to store  all the necessary data required for the tornado analyti
 
 Between the tornado and flood data, there are nine separate data sets that need to be pre-processed and stored. While the technology and approach to extracting and storing relevant information from each data is similar, they are still distinct processes that must be developed individually. All four data sets for the tornado analytic are structured with well defined approaches for extracting the required data.  A \gls{merra} parser demonstrating variable extraction and storage has been included in the appendix.  The flood analytic also contains several data sets that are well structured and do not present any significant challenge to data extraction on a continual basis. Within the flood analytic, is the unstructured newspaper and associated social media data related to flood reports and damage. This will require a significantly different parsing technology than the structured data and will be the most challenging to develop, implement, and refine.\\
 
-The flood analytic requires data sets with different attributes than that of tornado. The real time nature of newspaper articles and other social media requires daily or semi-daily ingestion. Significant flooding in a key geographic region may require an out of band delivery of the associated analytics.  This information will be reported first by the media in near real time and not seen in the structured feeds until the end of the month. The additional data sets required by the global and domestic flood offering surpass that of tornado by many times. The same storage technology, but not necessarily the same platform, will work for both offerings at different scales. Tornado data is well structured, while flood data is both structured and unstructured. Different algorithms, involving semantic and natural language processing are necessary to effectively parse the variety of feeds associated with flood reporting by the media.  The attributes shown by the flood  data sets map very well to the accepted criteria of big data, while tornado does not. The technology necessary to produce accurate flood analytics are more complex than tornado and at scale.  The expertise developed by building a platform framework capable of generating analytics on both structured and unstructured data will naturally transfer to the next ClimatEdge\texttrademark{}\index{ClimatEdge} offering, as well as other big data projects.
+The flood analytic requires data sets with different attributes than that of tornado. The real time nature of newspaper articles and other social media requires daily or semi-daily ingestion. Significant flooding in a key geographic region may require an out of band delivery of the associated analytics.  This information will be reported first by the media in near real time and not seen in the structured feeds until the end of the month. The additional data sets required by the global and domestic flood offering surpass that of tornado by many times. The same storage technology, but not necessarily the same platform, will work for both offerings at different scales. Tornado data is well structured, while flood data is both structured and unstructured. Different algorithms, involving semantic and natural language processing are necessary to effectively parse the variety of feeds associated with flood reporting by the media.  The attributes shown by the flood data sets map very well to the accepted criteria of big data, while tornado does not. The technology necessary to produce accurate flood analytics are more complex than tornado and at scale.  The expertise developed by building a platform framework capable of generating analytics on both structured and unstructured data will naturally transfer to the next ClimatEdge\texttrademark{}\index{ClimatEdge} offering, as well as other big data\index{big data} projects.
