Add openstack as a xen alternative

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -189,3 +189,10 @@
     howpublished = "\url{http://www.cetas.net}",
     note = "Online; accessed 24-March-2013"
 }
+@misc {openstack,
+    title ={{OpenStack Open Source Cloud Computing Software}},
+    author = {OpenStack},
+    year = 2012,
+    howpublished = "\url{http://www.openstack.org}",
+    note = "Online; accessed 25-March-2013"
+}
