initial changes from 3-25 feedback from advisor

--- a/index.tex
+++ b/index.tex
@@ -63,8 +63,8 @@
     \input{solution}
     \input{future}
     \input{conclusion}
-    \cleardoublepage
-    \include{appendix}
+%    \cleardoublepage
+%    \include{appendix}
     \cleardoublepage
     \bibliographystyle{plain}
     \bibliography{bibliography}
