--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,7 @@
 %!TEX root=index.tex
 \section{Conclusion}
-ClimatEdge\texttrademark{}\index{ClimatEdge} for general insurance underwriters can be developed with a limited number of basic offerings around tornado and hail prediction without investing in anything than a modern server with several terabytes of storage. Implementing hail prediction is similar enough to tornado prediction, both in computational requirements and data storage capacity (creation of a proprietary hail index would require substantially more capacity). Planned hail forensics are even simpler, just displaying the presence or absence of hail for any given time frame. However as research moves forward into using the \gls{merra} data to reduce uncertainty across offerings, the volumes increase substantially. Even with more complex visualizations such as maps or real time alerting for forensics, it is unlikely that these offerings will ever meet the velocity, volume, or variety necessary of a big data solution. Both the future global and domestic flood offerings will require a substantially more complex framework in order to succeed. Flood will have petabytes of satellite, radar, and news data along with the complex analytics necessary to distill that data into usable predictions. Unless a scaleable and elastic framework is put into place, the flood portion of ClimatEdge\texttrademark{}\index{ClimatEdge}, will have difficulty succeeding.\\
+ClimatEdge\texttrademark{}\index{ClimatEdge} for general insurance underwriters can be developed with a limited number of basic offerings around tornado and hail prediction without investing in anything than a modern server with several terabytes of storage. Implementing hail prediction is similar enough to tornado prediction, both in computational requirements and data storage capacity (creation of a proprietary hail index would require substantially more capacity). Planned hail forensics are even simpler, just displaying the presence or absence of hail for any given time frame. However as research moves forward into using the \gls{merra} data to reduce uncertainty across offerings, the volumes increase substantially. Even with more complex visualizations such as maps or real-time alerting for forensics, it is unlikely that these offerings will ever meet the velocity, volume, or variety necessary of a big data solution. Both the future global and domestic flood offerings will require a substantially more complex framework in order to succeed. Flood will have petabytes of satellite, radar, and news data along with the complex analytics necessary to distill that data into usable predictions. Unless a scaleable and elastic framework is put into place, the flood portion of ClimatEdge\texttrademark{}\index{ClimatEdge}, will have difficulty succeeding.\\
 
 A big data\index{big data}framework that is both flexible and loosely coupled has the greatest chance of meeting future offering requirements while allowing various technology components to be upgraded. Many commercially available offerings are dependent on particular technologies which have well established strengths and weaknesses. If the framework presentation layer is dependent on a particular storage layer implementation, those two layers are forever tightly coupled and unable to be easily separated without a major overhaul. While it is expected that a certain amount of coupling is needed (unless cumbersome abstraction layers are inserted), e.g. the presentation layer may need to know that certain data structures exist in the data store, it should not matter if those structures are implemented in Cassandra\index{Cassandra} or MySQL\index{MySQL}.\\
 
-There are several areas of future research centering on how best to store publicly available data sets. There is dizzying array of tradeoffs in deciding whether to implement remote \gls{api}s, clone the data sets internally, or develop and deploy big data\index{big data} appliances in partner agencies. What is even more daunting is that the solutions will likely vary based on the data set and the offering that comes from it. What works well for climate data, may not work well for healthcare data.\\
+There are several areas of future research centering on how best to store publicly available data sets. There is dizzying array of tradeoffs in deciding whether to implement remote \gls{api}s, clone the data sets internally, or develop and deploy big data\index{big data} appliances in partner agencies. What is even more daunting is that the solutions will likely vary based on the data set and the offering that comes from it. What works well for climate data, may not work well for healthcare data.\\real-timedddd
